--- a/.github/workflows/sheet2rdf.yml
+++ b/.github/workflows/sheet2rdf.yml
@@ -21,15 +21,12 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          conda create -n sheet2rdf python=3.11 pandas openpyxl
+          conda create -n sheet2rdf python=3.11 pandas openpyxl requests
           conda activate sheet2rdf
-          pip install gsheets
 
       - name: fetch
         shell: bash -l {0}
         env:
-          CLIENT: ${{secrets.CLIENT}}
-          STORAGE: ${{secrets.STORAGE}}
           FILE_NAME: ${{secrets.FILE_NAME}}
           SHEET_ID: ${{secrets.SHEET_ID}}
         run: |
