--- a/.github/workflows/sheet2rdf.yml
+++ b/.github/workflows/sheet2rdf.yml
@@ -55,7 +55,8 @@ jobs:
         run: |
           curl -L https://github.com/sparna-git/xls2rdf/releases/download/2.1.1/xls2rdf-app-2.1.1-onejar.jar -o xls2rdf.jar
           java -jar xls2rdf.jar convert -i $FILE_NAME.xlsx -o $FILE_NAME.ttl -l en
-          echo "<http://vocabs.lter-europe.net/${{ env.VOCAB_TYPE | toLowerCase }}/>" >> $FILE_NAME.ttl
+          VOCAB_LOWER=$(echo "${{ env.VOCAB_TYPE }}" | tr '[:upper:]' '[:lower:]')
+          echo "<http://vocabs.lter-europe.net/${VOCAB_LOWER}/>" >> $FILE_NAME.ttl
           echo "   rdf:type skos:ConceptScheme" >> $FILE_NAME.ttl
           echo "   rdf:type owl:Ontology ." >> $FILE_NAME.ttl
           mv xls2rdf.log ./logs/
