Refine extraction of ConceptScheme metadata block
Updated awk command to extract only the ConceptScheme metadata block and stop before skos:hasTopConcept.

--- a/.github/workflows/sheet2rdf.yml
+++ b/.github/workflows/sheet2rdf.yml
@@ -108,8 +108,13 @@ jobs:
             exit 1
           fi
 
-          # Extract the main ConceptScheme block (from its URI until the first terminating dot)
-          awk "/<http:\\/\\/vocabs\\.lter-europe\\.net\\/${VOCAB_LOWER}\\/>\s*a skos:ConceptScheme;/,/^\\s*\\.\\s*$/{print} /^\s*\.\s*$/{exit}" "$TTL_FILE" > conceptscheme_block.ttl
+          # Extract only the ConceptScheme metadata block — stop before skos:hasTopConcept
+          awk "
+            BEGIN { capture=0 }
+            /<http:\/\/vocabs\.lter-europe\.net\/${VOCAB_LOWER}\/>[[:space:]]*a[[:space:]]*skos:ConceptScheme;/ { capture=1 }
+            capture==1 { print }
+            /skos:hasTopConcept/ { exit }
+          " \"$TTL_FILE\" > conceptscheme_block.ttl
 
           if [ ! -s conceptscheme_block.ttl ]; then
             echo "⚠️ ConceptScheme block not found for ${VOCAB_TYPE} — skipping metadata extraction."
