Revise new term proposal issue template
Updated the new term proposal template to include maintainers' GitHub handles and removed unnecessary formatting.

--- a/.github/ISSUE_TEMPLATE/new_term.yml
+++ b/.github/ISSUE_TEMPLATE/new_term.yml
@@ -2,13 +2,15 @@ name: 🆕 New term proposal
 description: Propose a new term to be added to the eLTER SOs vocabulary
 labels: ["new term"]
 assignees:
-  - [oggioniale](https://github.com/oggioniale)
-  - [mabablue](https://github.com/mabablue)
+  - oggioniale
+  - mabablue
 body:
   - type: markdown
     attributes:
       value: |
-        Thank you for contributing! Please provide the details of your new term proposal below.
+        Maintainers reviewing new term proposals:
+        - [@OggioniAle](https://github.com/OggioniAle)
+        - [@mabablue](https://github.com/mabablue)
   - type: input
     id: term
     attributes:
