Modify new_term.yml to add thank you message
Updated the new term proposal template to include a thank you message.

--- a/.github/ISSUE_TEMPLATE/new_term.yml
+++ b/.github/ISSUE_TEMPLATE/new_term.yml
@@ -8,7 +8,10 @@ body:
   - type: markdown
     attributes:
       value: |
-        Maintainers reviewing new term proposals:
+        Thank you for contributing! Please provide the details of your new term proposal below.
+
+        ---
+        **Maintainers reviewing new term proposals:**
         - [@OggioniAle](https://github.com/OggioniAle)
         - [@mabablue](https://github.com/mabablue)
   - type: input
