--- a/.github/ISSUE_TEMPLATE/modification.yml
+++ b/.github/ISSUE_TEMPLATE/modification.yml
@@ -3,11 +3,19 @@ description: Suggest a change or correction to an existing term
 labels: ["modification"]
 assignees:
   - OggioniAle
+  - mabablue
 body:
   - type: markdown
     attributes:
       value: |
+        ✏️ **Modification request**
+
         Please describe your proposed modification below. Include as much detail as possible.
+
+        ---
+        👥 **Maintainers reviewing modification proposals:**
+        - [@OggioniAle](https://github.com/OggioniAle)
+        - [@mabablue](https://github.com/mabablue)
   - type: input
     id: term
     attributes:
