Update clarification template with emojis

--- a/.github/ISSUE_TEMPLATE/clarification.yml
+++ b/.github/ISSUE_TEMPLATE/clarification.yml
@@ -8,9 +8,9 @@ body:
   - type: markdown
     attributes:
       value: |
-        Use this template if you want to ask a question or suggest clarification about a term.
+        ✏️ Use this template if you want to ask a question or suggest clarification about a term.
         ---
-        **Maintainers for clarification or comment:**
+        👥 **Maintainers for clarification or comment:**
         - [@OggioniAle](https://github.com/OggioniAle)
         - [@mabablue](https://github.com/mabablue)
   - type: input
