--- a/.github/workflows/test_sheet.yaml
+++ b/.github/workflows/test_sheet.yaml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: Sheet2RDF
+name: test
 # Controls when the action will run.
 on:
   # Allows you to run this workflow manually from the Actions tab
