--- a/.github/workflows/test_sheet.yaml
+++ b/.github/workflows/test_sheet.yaml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: test
+name: Test
 # Controls when the action will run.
 on:
   # Allows you to run this workflow manually from the Actions tab
@@ -36,6 +36,7 @@ jobs:
         env:
           FILE_NAME: ${{secrets.FILE_NAME}}
           SHEET_ID: ${{secrets.SHEET_ID}}
+          SHEET_GID: ${{secrets.SHEET_GID}}
         run: |
           conda activate sheet2rdf          
           python ./src/sheet2xls.py
